Passe das Error Handling für MaxImageSize an [VA-113]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,7 +52,7 @@ artwork_information.delete=Kunstwerk löschen
 
 # shoppingCart.html
 shopping_cart.title=Einkaufswagen
-shopping_cart.header.1=Einkaufswagen
+shopping_cart.header.first=Einkaufswagen
 shopping_cart.button.delete=Löschen
 shopping_cart.sum.before_taxes=Vor Steuern
 shopping_cart.sum.after_taxes=Nach Steuern
@@ -89,4 +89,11 @@ error_pages.support=Support kontaktieren
 
 # defaultError.html
 default_error.header.description=Wow! Das passiert sehr selten. Gerne können sie uns den über diesen Fehler informieren!
+
+
+
+
+# JAVA
+
+error.max_upload_size=Die maximal erlaubte Bildgröße beträgt 2MB
 
