--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -96,4 +96,5 @@ default_error.header.description=Wow! Das passiert sehr selten. Gerne können si
 # JAVA
 
 error.max_upload_size=Die maximal erlaubte Bildgröße beträgt 2MB
-
+error.artwork.not_found=Kunstwerk nicht gefunden
+error.artwork.not_yours=Das Kunstwerk konnte nicht gelöscht werden, da es dir nicht gehört
