Füge die Funktionalität hinzu um die Sprache zu ändern [VA-113]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ modal.placeholder.price=Preis
 modal.placeholder.description=Beschreibung
 currency = €
 standard.title=Home - ART
+lang=de
 
 # NAVBAR
 navbar.contact=Über uns
