--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -5,17 +5,18 @@ modal.placeholder.price=Preis
 modal.placeholder.description=Beschreibung
 currency = €
 standard.title=Home - ART
+lang=en
 
 # NAVBAR
-navbar.contact=Über uns
-navbar.contact_us=Kontakt
-navbar.shopping_cart=Einkaufswagen
+navbar.contact=About us
+navbar.contact_us=contact
+navbar.shopping_cart=Shopping Cart
 navbar.login=Login
-navbar.registration.user=Registrieren
-navbar.registration.artist=Als Verkäufer registrieren
-navbar.my_artworks=Meine Kunst
+navbar.registration.user=Register
+navbar.registration.artist=Register as Artist
+navbar.my_artworks=My Art
 navbar.logout=Logout
-navbar.account=Konto
+navbar.account=Account
 
 
 # FOOTER
@@ -36,7 +37,7 @@ registration_artist.button.value=Registrieren
 
 # artworkInformation.html
 artwork_information.cart.remove=Aus Einkaufswagen entfernen
-artwork_information.cart.add=Zu Einkaufswagen hinzufügen
+artwork_information.cart.add=Add to cart
 artwork_information.edit=Kunstwerk bearbeiten
 artwork_information.modal_edit.edit=Bearbeiten
 artwork_information.delete=Kunstwerk löschen
