Rechne die Preise in die passende Währung um  [VA-113]

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -3,7 +3,7 @@ modal.close = Schließen
 modal.placeholder.name=Name
 modal.placeholder.price=Preis
 modal.placeholder.description=Beschreibung
-currency = €
+currency = $
 standard.title=Home - ART
 lang=en
 
