Füge Übersetzungen für Englisch hinzu [VA-113]

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,8 +1,8 @@
 # GENERAL
-modal.close = Schließen
+modal.close = Close
 modal.placeholder.name=Name
-modal.placeholder.price=Preis
-modal.placeholder.description=Beschreibung
+modal.placeholder.price=Price
+modal.placeholder.description=Description
 currency = $
 standard.title=Home - ART
 lang=en
@@ -20,51 +20,80 @@ navbar.account=Account
 
 
 # FOOTER
-footer.contact_us=Kontakt
-footer.legal=Rechtliches
+footer.contact_us=Contact
+footer.legal=Legal
 
 
 # myArtworks.html
-my_artworks.title=Meine Kunst
-my_artworks.add_artwork=Kunstwerk hinzufügen
-my_artworks.modal_add.add=Hinzufügen
+my_artworks.title=Meine Art
+my_artworks.add_artwork=Add Artwork
+my_artworks.modal_add.add=Add
 
 # registrationArtist.html
-registration_artist.title = Verkäufer Registrierung
-registration_artist.placeholder.country=Land
-registration_artist.placeholder.domicile=Stadt
-registration_artist.button.value=Registrieren
+registration_artist.title = Artist registration
+registration_artist.placeholder.country=Country
+registration_artist.placeholder.domicile=Domicile
+registration_artist.button.value=Register
+
+# registrationUser.html
+registration_user.title=Registration
+registration_user.placeholder.first_name=First Name
+registration_user.placeholder.second_name=Second Name
+registration_user.placeholder.email=your@email.com
+registration_user.placeholder.password=Password
+registration_user.placeholder.repeat_password=Repeat Password
+registration_user.register=Register
 
 # artworkInformation.html
-artwork_information.cart.remove=Aus Einkaufswagen entfernen
+artwork_information.cart.remove=Remove from cart
 artwork_information.cart.add=Add to cart
-artwork_information.edit=Kunstwerk bearbeiten
-artwork_information.modal_edit.edit=Bearbeiten
-artwork_information.delete=Kunstwerk löschen
+artwork_information.edit=Edit Artwork
+artwork_information.modal_edit.edit=Edit
+artwork_information.delete=Remove Artwork
 
 # shoppingCart.html
-shopping_cart.title=Einkaufswagen
-shopping_cart.header.1=Einkaufswagen
-shopping_cart.button.delete=Löschen
-shopping_cart.sum.before_taxes=Vor Steuern
-shopping_cart.sum.after_taxes=Nach Steuern
+shopping_cart.title=Shopping Cart
+shopping_cart.header.1=Shopping Cart
+shopping_cart.button.delete=Remove
+shopping_cart.sum.before_taxes=Before taxes
+shopping_cart.sum.after_taxes=After taxes
 shopping_cart.taxes=MwSt (19%)
-shopping_cart.checkout=Kaufen
+shopping_cart.checkout=Checkout
+
+# login.html
+login.title=Login
+login.placeholder.email=your@email.com
+login.placeholder.password=Password
+login.button.login=Login
+login.password_forgotten=Forgot Password?
+login.registration=Register first
+
+# Error pages
+error_pages.title=Something went wrong :(
+error_pages.header.first=Ooops!
+error_pages.status_code=Error code:
+error_pages.home=Take me home
+error_pages.support=Contact support
 
 # 400erErrors.html
-400er.title=Etwas ist schief gelaufen :(
-400er.header.first=Ooops!
-400er.status_code=Fehlercode:
 400er.header.description=It seems like this error is caused by you! Choose the 3rd button for some trouble shooting!
-400er.home=Bring mich nach Hause
-400er.support=Support kontaktieren
-400er.show_more=Mehr anzeigen
+400er.show_more=Show more
 400er.more.first=The first thing to do is to refresh the page. Press F5 to refresh the URL.
-400er.more.second=An error may have occurred if the page wasn't loaded correctly.
-400er.more.third=Clear the browser cache and delete cookies. If you are able to connect to the site via another device such as your mobile phone, clearing the cache and clearing cookies should easily solve the problem.
-400er.more.forth=Check the URL and make sure it is spelled correctly.
-400er.more.fifth=Remove malware: some malware can cause a 404 error to occur. It is imperative to make sure that your computer is protected and that it does not contain viruses.
+400er.more.second=Clear the browser cache and delete cookies. If you are able to connect to the site via another device such as your mobile phone, clearing the cache and clearing cookies should easily solve the problem.
+400er.more.third=Check the URL and make sure it is spelled correctly.
+400er.more.forth=Remove malware: some malware can cause a 404 error to occur. It is imperative to make sure that your computer is protected and that it does not contain viruses.
+400er.more.fifth=If that doesn't help, please contact the support.
 
+# 500erErrors.html
+500er.header.description=It seems like this error is caused by us! We are sorry
 
-
+# defaultError.html
 default_error.header.description=Wow! This error does not occur often. Consider telling us about this with our contact form!
+
+
+
+# JAVA
+
+error.max_upload_size=The maximum allowed image size is 2MB
+error.artwork.not_found=Artwork not found
+error.artwork.not_yours=The Artwork coulnd't be removed, because you don't own it
