Füge Erfolgsalerts für: Registrierung, Artwork hinzufügen, bearbeiten und löschen hinzu[VA-101]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -95,6 +95,13 @@ default_error.header.description=Wow! Das passiert sehr selten. Gerne können si
 
 # JAVA
 
+# Error
 error.max_upload_size=Die maximal erlaubte Bildgröße beträgt 2MB
 error.artwork.not_found=Kunstwerk nicht gefunden
 error.artwork.not_yours=Das Kunstwerk konnte nicht gelöscht werden, da es dir nicht gehört
+
+# Alerts
+alert.registration.success=Die Registrierung war erfolgreich!
+alert.artwork.add.success=Dein Kunstwerk wurde erfolgreich hinzugefügt
+alert.artwork.edit.success=Dein Kunstwerk wurde erfolgreich bearbeitet
+alert.artwork.remove.success=Dein Kunstwerk wurde erfolgreich gelöscht
