--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -94,6 +94,13 @@ default_error.header.description=Wow! This error does not occur often. Consider 
 
 # JAVA
 
+# Error
 error.max_upload_size=The maximum allowed image size is 2MB
 error.artwork.not_found=Artwork not found
 error.artwork.not_yours=The Artwork coulnd't be removed, because you don't own it
+
+# Alerts
+alert.registration.success=The registration was successfull
+alert.artwork.add.success=Your artwork was succesfully added
+alert.artwork.edit.success=Your artwork was succesfully edited
+alert.artwork.remove.success=Your artwork was succesfully removed
