Passe das Errorhandling an und füge error alerts hinzu [VA-111]

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -98,10 +98,15 @@ default_error.header.description=Wow! Das passiert sehr selten. Gerne können si
 # Error
 error.max_upload_size=Die maximal erlaubte Bildgröße beträgt 2MB
 error.artwork.not_found=Kunstwerk nicht gefunden
-error.artwork.not_yours=Das Kunstwerk konnte nicht gelöscht werden, da es dir nicht gehört
 
 # Alerts
 alert.registration.success=Die Registrierung war erfolgreich!
 alert.artwork.add.success=Dein Kunstwerk wurde erfolgreich hinzugefügt
 alert.artwork.edit.success=Dein Kunstwerk wurde erfolgreich bearbeitet
+alert.artwork.edit.failure=Leider gab es einen Fehler beim Kunstwerk bearbeiten
 alert.artwork.remove.success=Dein Kunstwerk wurde erfolgreich gelöscht
+alert.artwork.remove.failure=Leider gab es einen Fehler beim löschen des Kunstwerkes
+alert.user.checkout.success=Dein Warenkorb wurde erfolgreich gekauft
+alert.user.checkout.failure=Es gab einen Fehler beim Auschecken
+alert.shopping_cart.add=Es gab einen Fehler beim hinzufügen zum Warenkorb
+
