--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -97,10 +97,14 @@ default_error.header.description=Wow! This error does not occur often. Consider 
 # Error
 error.max_upload_size=The maximum allowed image size is 2MB
 error.artwork.not_found=Artwork not found
-error.artwork.not_yours=The Artwork coulnd't be removed, because you don't own it
 
 # Alerts
 alert.registration.success=The registration was successfull
 alert.artwork.add.success=Your artwork was succesfully added
 alert.artwork.edit.success=Your artwork was succesfully edited
+alert.artwork.edit.failure=Ther was an error, editing your artwork
 alert.artwork.remove.success=Your artwork was succesfully removed
+alert.artwork.remove.failure=There was an error removing the artwork
+alert.user.checkout.success=Successfully checked out
+alert.user.checkout.failure=There was an error checking out
+alert.shopping_cart.add=There was an error adding the artwork to the cart
